refactoring pour les conversion

--- a/communication/Makefile
+++ b/communication/Makefile
@@ -15,8 +15,12 @@ all: player
 fonctionTCP.o: fonctionTCP.c fonctionTCP.h
 	gcc -c -o fonctionTCP.o fonctionTCP.c $(LD_FLAGS)
 
-player: player.c fonctionTCP.h
-	gcc player.c -o player fonctionTCP.o $(LD_FLAGS)
+
+conversion.o: conversion.c conversion.h
+	gcc -c -o conversion.o conversion.c $(LD_FLAGS)
+
+player: player.c fonctionTCP.h conversion.h
+	gcc player.c -o player fonctionTCP.o conversion.o $(LD_FLAGS)
 
 
 clean:
